--- a/CSS/minesweeper.css
+++ b/CSS/minesweeper.css
@@ -1,14 +1,23 @@
 @import url('./reset.css');
 @import url('./popup.css');
-
+body {
+  font-family: 'IBM Plex Sans KR', sans-serif;
+}
+.minesweeper-title {
+  padding: 2rem;
+  font-size: 2rem;
+  font-weight: 600;
+}
 .minesweeper-wrap {
-  margin: 0 auto;
-  width: 500px;
-  height: 500px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .minesweeper-board {
-  width: 100%;
-  height: 100%;
+  width: 500px;
+  height: 500px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  font-weight: 700;
 }
 .row {
   --width-ratio: 10%;
@@ -23,15 +32,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 1px solid;
-  transition: all 0.3s ease;
+  border: 1px solid rgba(0, 0, 0, 0.1);
 }
 .col:hover {
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 .flag {
-  background-color: red !important;
+  color: red;
+  font-size: 1.5em;
+  transition: 0.3s all ease;
 }
-.open {
-  background-color: skyblue;
+.opened {
+  background-color: steelblue;
+  color: white;
+  transition: 0.5s all ease;
 }
