--- a/CSS/popup.css
+++ b/CSS/popup.css
@@ -2,7 +2,7 @@
   display: none;
 }
 .title {
-  color: #db5b33;
+  color: steelblue;
   font-size: 2em;
   text-align: center;
 }
@@ -45,7 +45,17 @@
 .modal-cancel,
 .modal-accept {
   width: 30%;
+  height: 30px;
   margin: 0 auto;
+  transition: 0.4s all ease;
+  border: 0;
+  border-radius: 0.3rem;
+  cursor: pointer;
+}
+.modal-cancel:hover,
+.modal-accept:hover {
+  color: white;
+  background-color: steelblue;
 }
 
 .modal-close {
@@ -55,4 +65,5 @@
   position: absolute;
   top: 10px;
   right: 10px;
+  cursor: pointer;
 }
