--- a/CSS/style_park.css
+++ b/CSS/style_park.css
@@ -1,33 +1,66 @@
-/* COMMON */
-body {
-  margin: 0;
+.color-game {
+  margin-top: 2rem;
 }
 
-button {
-  color: inherit;
-  font-size: inherit;
+.color-palette {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 600px;
+  margin: 0 auto 1.5rem;
+  gap: 0.625rem;
+}
+
+.palette-item {
+  position: relative;
+  width: 280px;
+  height: 280px;
+  border-radius: 50%;
+  box-shadow: 3px 3px 5px 0px rgb(0 0 0 / 75%);
   cursor: pointer;
-  background-color: transparent;
-  border: 0.125rem solid #fff;
-  padding: 0.5rem;
+  opacity: 1;
+  transition: all 0.4s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.a11y-hidden {
+.hint {
+  position: absolute;
+  top: 6.25rem;
+  left: 3.5rem;
+  font-size: 1.5rem;
+  background-color: #d9534f;
+  color: #fff;
+}
+
+.hint:hover {
+  transform: scale(1.05);
+}
+
+.hint-list {
+  position: absolute;
+  top: 8rem;
+  left: 3.5rem;
+  text-align: center;
+  transition: height 0.5s ease;
   overflow: hidden;
-  position: absolute !important;
-  clip: rect(0, 0, 0, 0);
-  clip-path: inset(50%);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
+  height: 0;
 }
 
-ul {
-  padding-left: 0;
-  list-style: none;
+.hint-item {
+  color: #fff;
+  margin-top: 0.5rem;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  width: 8.125rem;
+  line-height: 8.125rem;
 }
+
+/* 
 
 .inner {
+  position: relative;
   max-width: 1200px;
   margin: 0 auto;
   height: 100vh;
@@ -36,7 +69,7 @@ ul {
   justify-content: space-between;
 }
 
-/* COLOR-GAME */
+
 .navigation {
   position: relative;
   display: flex;
@@ -52,6 +85,13 @@ ul {
 
 .restart {
   z-index: 1;
+  color: inherit;
+  font-size: inherit;
+  cursor: pointer;
+  background-color: transparent;
+  border: 0.125rem solid #fff;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
 }
 
 .display-rgb {
@@ -76,6 +116,7 @@ ul {
 }
 
 .palette-item {
+  position: relative;
   width: 280px;
   height: 280px;
   border-radius: 50%;
@@ -83,6 +124,9 @@ ul {
   cursor: pointer;
   opacity: 1;
   transition: all 0.4s ease;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .palette-item:hover {
@@ -96,9 +140,36 @@ ul {
 .hint {
   position: absolute;
   top: 6.25rem;
+  left: 3.5rem;
+  font-size: 1.5rem;
+  background-color: #d9534f;
+  color: #fff;
+}
+
+.hint:hover {
+  transform: scale(1.05);
+}
+
+.hint-list {
+  position: absolute;
+  top: 8rem;
+  left: 3.5rem;
+  text-align: center;
+  transition: height 0.5s ease;
+  overflow: hidden;
+  height: 0;
+}
+
+.hint-item {
+  color: #fff;
+  margin-top: 0.5rem;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  width: 8.125rem;
+  line-height: 8.125rem;
 }
 
 footer {
   height: 3rem;
   background: steelblue;
-}
+} */
