feat: Apply js to index.html
1. overall applying js to index.html file

--- a/CSS/base.css
+++ b/CSS/base.css
@@ -52,6 +52,10 @@ body {
   padding: 0.5rem;
 }
 
+.restart:hover {
+  transform: scale(1.05);
+}
+
 @media screen and (max-width: 799px) {
   .restart {
     order: 1;
