--- a/CSS/style_park.css
+++ b/CSS/style_park.css
@@ -25,6 +25,10 @@
   align-items: center;
 }
 
+.palette-item:hover {
+  transform: scale(1.03);
+}
+
 .hint {
   position: absolute;
   top: 6.25rem;
@@ -32,6 +36,8 @@
   font-size: 1.5rem;
   background-color: #d9534f;
   color: #fff;
+  border: 0.125rem solid #fff;
+  border-radius: 0.5rem;
 }
 
 .hint:hover {
