--- a/CSS/minesweeper.css
+++ b/CSS/minesweeper.css
@@ -20,6 +20,7 @@
   height: var(--gameBoard-width);
   border: 1px solid rgba(0, 0, 0, 0.1);
   font-weight: 700;
+  cursor: pointer;
 }
 .row {
   display: flex;
