feat: Add Sound Effect on minesweeper JS
좌클릭, 우클릭, 승리, 패배시 소리 효과를 추가함.

--- a/CSS/minesweeper.css
+++ b/CSS/minesweeper.css
@@ -56,5 +56,8 @@
   transition: 0.5s all ease;
 }
 .mine {
-  background-color: rgba(255, 0, 0, 0.8) !important;
+  background-color: rgba(255, 0, 0, 0.8);
+}
+.win .mine {
+  background-color: rgba(172, 255, 47, 0.893) !important;
 }
