--- a/CSS/style_park.css
+++ b/CSS/style_park.css
@@ -19,14 +19,19 @@
   box-shadow: 3px 3px 5px 0px rgb(0 0 0 / 75%);
   cursor: pointer;
   opacity: 1;
-  transition: all 0.4s ease;
   display: flex;
   justify-content: center;
   align-items: center;
+  transform: rotateY(0deg);
 }
 
 .palette-item:hover {
-  transform: scale(1.03);
+  transform: scale(1.05);
+}
+
+.palette-item.active {
+  transition: transform 1s ease;
+  transform: rotateY(180deg);
 }
 
 .hint {
