--- a/CSS/hover.css
+++ b/CSS/hover.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Raleway', sans-serif;
+  /* font-family: 'Raleway', sans-serif; */
 }
 
 body {
@@ -29,7 +29,7 @@ body {
 
   position: relative;
   transform-style: preserve-3d;
-  transition: transform 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transition: all 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 
 .game-container:hover {
