--- a/CSS/cardFlip.css
+++ b/CSS/cardFlip.css
@@ -3,13 +3,15 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  font-size: 30px;
+  font-size: 25px;
+  padding: 80px 0;
 }
 
 .game-status {
   display: flex;
-  position: absolute;
-  top: 90px;
+  margin: 30px 0;
+  position: fixed;
+  top: 60px;
 }
 
 .elapsedTime {
@@ -22,10 +24,11 @@
   grid-template-rows: repeat(4, 8rem);
   grid-gap: 1rem;
   perspective: 800px;
-  margin: 30px 0;
+
 }
 
 .cardContainer {
+  cursor: pointer;
   position: relative;
   transform-style: preserve-3d;
   transition: all 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
