--- a/CSS/hover.css
+++ b/CSS/hover.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  /* font-family: 'Raleway', sans-serif; */
 }
 
 body {
@@ -46,29 +45,27 @@ body {
 }
 
 .game-back {
-  background-color: #4682b4;
+  background-color: var(--main-color);
   backface-visibility: hidden;
 }
 
-.mine {
-  background-image: url(../images/minesweeper.gif);
+.mine,
+.color,
+.card {
   background-size: cover;
   background-position-x: center;
-  transform: rotateY(-180deg);
+  transform: scaleX(-1);
+}
+.mine {
+  background-image: url(../images/minesweeper.gif);
 }
 
 .color {
   background-image: url(../images/card_ani.gif);
-  background-size: cover;
-  background-position-x: center;
-  transform: rotateY(-180deg);
 }
 
 .card {
   background-image: url(../images/card_ani.gif);
-  background-size: cover;
-  background-position-x: center;
-  transform: rotateY(-180deg);
 }
 
 h1 {
