--- a/CSS/base.css
+++ b/CSS/base.css
@@ -1,4 +1,7 @@
 /* COMMON */
+:root {
+  --main-color: #4682b4;
+}
 body {
   font-family: 'IBM Plex Sans KR', sans-serif;
   display: flex;
@@ -38,7 +41,7 @@ body {
 
 .game-mode-button:hover,
 .game-mode-button.current-mode {
-  color: steelblue;
+  color: var(--main-color);
   background-color: white;
 }
 .navigation {
@@ -47,7 +50,7 @@ body {
   align-items: center;
   font-size: 1.5rem;
   color: #fff;
-  background: steelblue;
+  background: var(--main-color);
 }
 
 @media screen and (min-width: 800px) {
@@ -85,7 +88,7 @@ body {
   justify-content: space-between;
   align-items: center;
   min-height: 3.5rem;
-  background: steelblue;
+  background: var(--main-color);
   padding: 0 3rem 0;
 }
 
@@ -102,6 +105,6 @@ body {
 
 .restart:hover,
 .home:hover {
-  color: steelblue;
+  color: var(--main-color);
   background-color: white;
 }
