--- a/CSS/style_park.css
+++ b/CSS/style_park.css
@@ -9,6 +9,8 @@
   width: 600px;
   margin: 0 auto 1.5rem;
   gap: 0.625rem;
+  font-size: 1.5rem;
+  color: #fff;
 }
 
 .palette-item {
@@ -22,6 +24,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: transform 1s ease;
   transform: rotateY(0deg);
 }
 
@@ -30,8 +33,20 @@
 }
 
 .palette-item.active {
-  transition: transform 1s ease;
   transform: rotateY(180deg);
+}
+
+.palette-item > span {
+  user-select: none;
+  opacity: 0;
+  transition: opacity 0.4s;
+  transition-delay: 0.4s;
+  transform: scaleX(-1);
+}
+
+.palette-item.active > span {
+  display: initial;
+  opacity: 1;
 }
 
 .hint {
