refactor: Add handleGameOver function & Modify handleRigt/leftClick function
게임이 종료될 때 실시하는 명령을 모아둔 함수를 새로 설정함.
좌/우클릭 시, 열린칸/깃발인 경우엔 무시하는 로직을 가독성 좋게 다시 정의함.

--- a/CSS/minesweeper.css
+++ b/CSS/minesweeper.css
@@ -52,7 +52,7 @@
 }
 .opened {
   background-color: var(--main-color);
-  color: white;
+  color: var(--font-size);
   transition: 0.5s all ease;
 }
 .mine {
