design: Update index.html Style And base.css for header and footer
메인 페이지 스타일링을 추가하고, 게임 페이지의 헤더와 푸터를 반응형으로 설정함.

--- a/CSS/base.css
+++ b/CSS/base.css
@@ -43,7 +43,7 @@ body {
 
 .game-mode-button {
   color: inherit;
-  font-size: 0.6em;
+  /* font-size: 0.6em; */
   cursor: pointer;
   background-color: transparent;
   border: 0.125rem solid var(--font-color);
@@ -80,6 +80,12 @@ body {
     justify-content: center;
     min-height: 5rem;
     gap: 0.5rem;
+    font-size: 1rem;
+    padding: 0.5rem;
+  }
+  .restart,
+  .home {
+    font-size: 1rem;
   }
 }
 
@@ -108,7 +114,7 @@ body {
 .restart,
 .home {
   color: var(--font-color);
-  font-size: inherit;
+  /* font-size: inherit; */
   cursor: pointer;
   background-color: transparent;
   border: 0.125rem solid var(--font-color);
