design: Change GIF images
Gif 이미지를 추가/ 변경 하였음.

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -148,7 +148,7 @@ body {
 }
 
 .color {
-  background-image: url(../images/card_ani.gif);
+  background-image: url(../images/colorguess.gif);
 }
 
 .card {
