--- a/CSS/cardFlip.css
+++ b/CSS/cardFlip.css
@@ -11,15 +11,11 @@
   padding-bottom: 1rem;
 }
 
-.elapsedTime {
-  margin: 0 0 0 50px;
-}
-
 .cardSection {
   display: grid;
-  grid-template-columns: repeat(4, 8rem);
-  grid-template-rows: repeat(4, 8rem);
-  grid-gap: 1rem;
+  grid-template-columns: repeat(4, 2.7em);
+  grid-template-rows: repeat(4, 2.7em);
+  grid-gap: 0.5rem;
   perspective: 800px;
 }
 
@@ -30,6 +26,8 @@
   transition: all 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 15px;
   border-radius: 10px;
+  width: 100%;
+  height: 100%;
 }
 
 .cardFace,
