--- a/CSS/color_game.css
+++ b/CSS/color_game.css
@@ -6,17 +6,18 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  width: 600px;
+  max-width: 600px;
   margin: 0 auto 1.5rem;
-  gap: 0.625rem;
+  gap: 2rem;
   font-size: 1.5rem;
   color: #fff;
 }
 
 .palette-item {
   position: relative;
-  width: 280px;
-  height: 280px;
+  width: 45%;
+  height: 0;
+  padding-top: 45%;
   border-radius: 50%;
   box-shadow: 3px 3px 5px 0px rgb(0 0 0 / 75%);
   cursor: pointer;
@@ -37,11 +38,14 @@
 }
 
 .palette-item > span {
+  font-size: 1.3rem;
   user-select: none;
   opacity: 0;
   transition: opacity 0.4s;
   transition-delay: 0.4s;
-  transform: scaleX(-1);
+  position: absolute;
+  top: 50%;
+  transform: scaleX(-1) translateY(-50%);
 }
 
 .palette-item.active > span {
@@ -84,93 +88,71 @@
   width: 8.125rem;
   line-height: 8.125rem;
 }
-/* 
-
-.inner {
-  position: relative;
-  max-width: 1200px;
-  margin: 0 auto;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-
-.navigation {
-  position: relative;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 1.5rem;
-  color: #fff;
-  background: var(--main-color);
-  min-height: 4rem;
-  padding: 0 3rem 0;
-  margin-bottom: 1.5rem;
-}
-
-.restart {
-  z-index: 1;
-  color: inherit;
-  font-size: inherit;
-  cursor: pointer;
-  background-color: transparent;
-  border: 0.125rem solid #fff;
-  border-radius: 0.5rem;
-  padding: 0.5rem;
-}
-
-.display-rgb {
-  position: absolute;
-  left: 0;
-  right: 0;
-  text-align: center;
-}
-
-.display-round {
-  position: absolute;
-  right: 15rem;
+.color-game {
+  margin-top: 1rem;
 }
 
 .color-palette {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  width: 600px;
+  max-width: 600px;
   margin: 0 auto 1.5rem;
-  gap: 0.625rem;
+  gap: 2rem;
+  font-size: 1.5rem;
+  color: #fff;
 }
 
 .palette-item {
   position: relative;
-  width: 280px;
-  height: 280px;
+  width: 45%;
+  height: 0;
+  padding-top: 45%;
   border-radius: 50%;
   box-shadow: 3px 3px 5px 0px rgb(0 0 0 / 75%);
   cursor: pointer;
   opacity: 1;
-  transition: all 0.4s ease;
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: transform 1s ease;
+  transform: rotateY(0deg);
 }
 
 .palette-item:hover {
-  transform: scale(1.03);
+  transform: scale(1.05);
 }
 
 .palette-item.active {
+  transform: rotateY(180deg);
+}
+
+.palette-item > span {
+  user-select: none;
   opacity: 0;
+  transition: opacity 0.4s;
+  transition-delay: 0.4s;
+  position: absolute;
+  top: 50%;
+  transform: scaleX(-1) translateY(-50%);
+}
+
+.palette-item.active > span {
+  display: initial;
+  opacity: 1;
 }
 
 .hint {
   position: absolute;
   top: 6.25rem;
   left: 3.5rem;
+  border: 0;
+  border-radius: 0.5rem;
   font-size: 1.5rem;
   background-color: #d9534f;
   color: #fff;
+  border: 0.125rem solid #fff;
+  border-radius: 0.5rem;
 }
 
 .hint:hover {
@@ -195,8 +177,3 @@
   width: 8.125rem;
   line-height: 8.125rem;
 }
-
-footer {
-  height: 3rem;
-  background: var(--main-color);
-} */
