--- a/CSS/color_game.css
+++ b/CSS/color_game.css
@@ -19,7 +19,7 @@
   height: 0;
   padding-top: 45%;
   border-radius: 50%;
-  box-shadow: 3px 3px 5px 0px rgb(0 0 0 / 75%);
+  box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.75);
   cursor: pointer;
   opacity: 1;
   display: flex;
@@ -109,7 +109,7 @@
   height: 0;
   padding-top: 45%;
   border-radius: 50%;
-  box-shadow: 3px 3px 5px 0px rgb(0 0 0 / 75%);
+  box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.75);
   cursor: pointer;
   opacity: 1;
   display: flex;
